# TOTcalibration

./: .gitignore  CMakeLists.txt  README.md  calibration.cxx  generateCalibrationFile.cxx  plotter.cxx  runCalib.py  testFitter.cxx  totCalibration.cxx
include/: adcFitter.h  tdrstyle.h  totFitter.h
src/: PulseFitter.cc  adcFitter.cc  totFitter.cc
